Contact us section alignment fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,6 +512,10 @@ BRAID
   background-color: #D7D3D1;
 }
 
+#contact-section a {
+  color: #000000;
+}
+
 /*==========================================
     FOOTER SECTION
 =====================================================*/
@@ -527,6 +531,13 @@ BRAID
 /*==========================================
     MEDIA QURIES
 =====================================================*/
+/*Testing to fix dropdown on ipad*/
+@media (max-width: 848px){
+  .collapse .navbar-collapse 
+  }
+}
+
+
 @media (max-width: 847px) {
     .flot-nav {
     float:left;
